--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,8 @@
-name: 'Debugging with tmate'
-description: 'Debug your GitHub Actions Environment interactively by using SSH or a Web shell'
-author: 'Max Schmitt'
-runs:
-  using: 'node12'
-  main: 'lib/index.js'
-inputs:
-  sudo:
-    description: 'If apt should be executed with sudo or without'
-    required: false
-    default: 'true'
-  limit-access-to-actor:
-    description: 'If only the public SSH keys of the user triggering the workflow should be authorized'
-    required: true
-    default: 'false'
+name: Ubuntu
+on: [push]
+jobs:
+  Ubuntu:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup Debug Session
+      uses: csexton/debugger-action@master
